<resources>
    <string name="app_name">The Grimpeurs Cycling Club</string>
    <string name="user_id">Please Enter Your User ID</string>
    <string name="user_role">Role</string>
    <string name="password">Please Enter Your Password</string>
    <string name="participant">Participant</string>
    <string name="cycling_club">Cycling Club</string>
    <string name="administrator">Administrator</string>
    <string name="register">Register</string>
    <string name="signin">Sign In</string>
    <string name="welcome">Welcome to The Grimperus Cycling Club</string>
    <string name="email">"please Enter Your Email "</string>
    <string name="welcomeScreenName" />
    <string name="welcomeScreenRole" />
    <string name="addEvent">Add Event Type</string>
    <string name="type">Event Type</string>
    <string name="Time_Trial">Time Trial</string>
    <string name="Hill_Climb">Hill Climb</string>
    <string name="Road_Race">Road Race</string>
    <string name="update_eventType">Update Event Type</string>
    <string name="delete_eventType">Delete Event Type</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="Delete_Member">Delete Member</string>
    <string name="Detail">Enter detail about event</string>
    <string name="Age">Enter event age constrain</string>
    <string name="Pace">Enter number of pace</string>
    <string name="info">Event information</string>
    <string name="Level">Enter level of event</string>
    <string name="Additional_Requirement">Enter N/A or additional requirement</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete_Text">Are you sure to delete this resources?</string>
    <string name="update_AdditionalIformation">Enter additional requirement or blank</string>
    <string name="Update">Update</string>
    <string name="completeProfile">Please Complete the profile to continue</string>
    <string name="cue">Please Create event follow the information above as lower limit.</string>
    <string name="create">Create</string>
    <string name="Social_Link">Please Enter Your Social Media Link (mandatory)</string>
    <string name="Contact_Name">Please Enter Your Contact Name</string>
    <string name="Phone_Number">Please Enter Your Phone Number (mandatory)</string>
    <string name="Complete">Complete</string>
    <string name="Update_Social_Link">Enter social link | leave blank for no update</string>
    <string name="Update_Phone_Number">Enter phone number | leave blank for no update</string>
    <string name="Update_Contact_Name">Enter contact name | leave blank for no update</string>
    <string name="Update_Profile">Update Profile</string>
    <string name="Create_Event">Create Event</string>
    <string name="Update_Event">Update Event</string>
    <string name="Delete_Event">Delete Event</string>
    <string name="event_info">Event Information:</string>
    <string name="updateEvent_age">Please Enter For Update Age Or Blank For No Change</string>
    <string name="updateEvent_pace">Please Enter For Update Pace Or Blank For No Change</string>
    <string name="updateEvent_level">Please Enter For Update Level Or Blank For No Change</string>
    <string name="updateEvent_volume">Please Enter For Update Volume Or Blank For No Change</string>
    <string name="updateEvent_detail">Please Enter For Update Detail Or Blank For No Change</string>
    <string name="updateEvent_additionalRequirement">Please Enter For Update Additional Requirement Or Blank For No Change</string>
    <string name="updateEvent_name">Please Enter For Update Name Or Blank For No Change</string>
    <string name="updateButton">Update</string>
    <string name="createEvent_name">Please Enter Name for The Event</string>
    <string name="createEvent_detail">Please Enter The Detail about The Event</string>
    <string name="createEvent_addationalRequirement">Please Additional Requirement For Your Event or Blank To Use Addition Requirement Above</string>
    <string name="createEvent_age">Please enter a Number for Age</string>
    <string name="createEvent_pace">Please enter a Number for Pace</string>
    <string name="createEvent_level">Please enter a Number for Level</string>
    <string name="createEvent_volume">Please enter a Number for Volume</string>
    <string name="chooseClub_logo">Choose a logo for your club</string>
    <string name="personal_info">"Please fill your info below "</string>
    <string name="edit_rate">Please Rate The Club From 1 To 5</string>
    <string name="edit_comment">Please Leave A Comment To Club</string>
    <string name="btn_searchByType">Search by type</string>
    <string name="btn_searchByName">Search by name</string>
    <string name="btn_searchByClub">Search by club</string>
    <string name="btn_rateClub">Rate a club</string>
    <string name="edit_p_name">Please Enter Your Name</string>
    <string name="edit_p_age">Please Enter Your Age</string>
    <string name="edit_p_pace">Please Enter Your Pace</string>
    <string name="edit_p_level">Please Enter Your Level</string>
    <string name="Join">Join</string>
    <string name="edit_searchEventName">Please Enter Event Name</string>
    <string name="Search">Search</string>
    <string name="dismiss">Dismiss</string>
    <string name="btn_signOff">Sign off</string>

</resources>