<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/EventType"
            android:layout_width="396dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/event_type"
            android:layout_width="match_parent"
            android:layout_height="125dp">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickRadioButton"
                android:text="@string/Time_Trial" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickRadioButton"
                android:text="@string/Hill_Climb" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickRadioButton"
                android:text="@string/Road_Race" />

        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/Event_Information"
            android:layout_width="393dp"
            android:layout_height="45dp"
            android:text="@string/info"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Detail"
            android:inputType="text"
            android:textSize="18sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Age"
            android:inputType="text"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editPace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Pace"
            android:inputType="text"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Level"
            android:inputType="text"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editAddition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Additional_Requirement"
            android:inputType="text"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/addToRepo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAddToRepo"
            android:text="@string/Submit" />

        <Button
            android:id="@+id/btn_back1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBack"
            android:text="@string/back"
            tools:text="@string/Cancle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>