<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CyclingClub_Main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClickUpdateProfile"
            android:text="@string/Update_Profile" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClickCreateEvent"
            android:text="@string/Create_Event" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClickUpdateEvent"
            android:text="@string/Update_Event" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClickDeleteEvent"
            android:text="@string/Delete_Event" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClickChooseLogo"
            android:text="@string/chooseClub_logo" />

        <Button
            android:id="@+id/btn_clubSignOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSignOff"
            android:text="@string/btn_signOff" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/default_logo"/>
<!--            android:src="@drawable/logo_default"-->


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>