<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParticipateMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_searchByType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClickSearchByType"
            android:text="@string/btn_searchByType" />

        <Button
            android:id="@+id/btn_searchByName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClickSearchByName"
            android:text="@string/btn_searchByName" />

        <Button
            android:id="@+id/btn_searchByClub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClickSearchByClub"
            android:text="@string/btn_searchByClub" />

        <Button
            android:id="@+id/btn_rateClub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnClickRateClub"
            android:text="@string/btn_rateClub" />

        <Button
            android:id="@+id/btn_participantSignOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSignOff"
            android:text="@string/btn_signOff" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>