<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/txt_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/txt_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/txt_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/txt_pace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/txt_additionalRequirment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/txt_cue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cue" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/edit_eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/createEvent_name"
            android:inputType="text"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edit_eventAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/createEvent_age"
            android:inputType="text"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edit_eventPace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/createEvent_pace"
            android:inputType="text"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edit_eventLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/createEvent_level"
            android:inputType="text"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edit_eventDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/createEvent_detail"
            android:inputType="text"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edit_eventAdditionalRequirement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/createEvent_addationalRequirement"
            android:inputType="text"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/edit_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/createEvent_volume"
            android:inputType="text"
            android:textSize="12sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickCreate"
            android:text="@string/create" />

        <Button
            android:id="@+id/btn_backToCycleClubMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickBack"
            android:text="@string/back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>