<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="186dp" />

        <Button
            android:id="@+id/addEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAddEvent"
            android:text="@string/addEvent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickUpdateEvent"
            android:text="@string/update_eventType" />

        <Button
            android:id="@+id/delete_eventType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickDeleteEventType"
            android:text="@string/delete_eventType" />

        <Button
            android:id="@+id/btn_deleteMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickDeleteMember"
            android:text="@string/Delete_Member" />

        <Button
            android:id="@+id/btn_adminSignOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSignOff"
            android:text="@string/btn_signOff" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>