<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CyclingClub_CompleteProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/completeProfile" />

        <EditText
            android:id="@+id/edit_socialLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Social_Link"
            android:inputType="text"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edit_contactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Contact_Name"
            android:inputType="text"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edit_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Phone_Number"
            android:inputType="text"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickValidate"
            android:text="@string/Complete" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>