<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_role"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="100dp"
            android:text="@string/user_role"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/radio_group_for_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="58dp"
                android:onClick="onClickRadioButton"
                android:text="@string/participant" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="58dp"
                android:onClick="onClickRadioButton"
                android:text="@string/cycling_club" />
        </RadioGroup>

        <EditText
            android:id="@+id/user_id"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/user_id"
            android:inputType="text"
            android:onClick="onClickEditTextUserId"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="text"
            android:onClick="onClickEditTextPassword"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:onClick="onClickEditTextEmail"
            android:textSize="15sp" />

        <Button
            android:id="@+id/register"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:inputType="text"
            android:onClick="onClickRegister"
            android:text="@string/register" />

    </LinearLayout>
</RelativeLayout>